contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,7 @@ h2 {
   font-size: 200%;
   margin-left: 30px;
 }
+
+.contrast-fix {
+  filter: contrast(0%);
+}
